# Autonomous-Lake-Cleaning-ASV-V2

./: .gitignore  README.md  test_imu.py  ws_bridge.py
docker/: Dockerfile  entrypoint.sh
esp32_firmware/: asv_esp32_slave.ino
src/: thruster_node.py
src/asv_bringup/: CMakeLists.txt  package.xml
src/asv_bringup/launch/: asv_bringup.launch.py  asv_control.launch.py
src/asv_camera/: package.xml  setup.cfg  setup.py
src/asv_camera/asv_camera/: camera_node.py
src/asv_camera/config/: camera_params.yaml
src/asv_camera/launch/: camera.launch.py
src/asv_control/: package.xml  setup.py
src/asv_control/asv_control/: control_node.py  geofence_node.py  heading_fusion.py  safety_node.py  waypoint_follower_node.py  zigzag_planner_node.py
src/asv_gps/: package.xml  setup.cfg  setup.py
src/asv_gps/asv_gps/: gps_node.py
src/asv_gps/config/: gps_params.yaml
src/asv_gps/launch/: gps.launch.py
src/asv_imu/: package.xml  setup.cfg  setup.py
src/asv_imu/asv_imu/: imu_node.py
src/asv_imu/config/: imu_params.yaml
src/asv_imu/launch/: imu.launch.py
src/asv_joystick/: package.xml  setup.cfg  setup.py
src/asv_joystick/asv_joystick/: asv_joystick_node.py  evdev_joystick.py  joystick_node.py
src/asv_joystick/config/: joystick_params.yaml
src/asv_joystick/launch/: joystick.launch.py
src/asv_localization/: package.xml  setup.cfg  setup.py
src/asv_localization/asv_localization/: boat_viz_node.py  gps_to_local_node.py  localization_node.py
src/asv_localization/config/: localization_params.yaml
src/asv_localization/launch/: localization.launch.py
src/asv_manual_control/: package.xml  setup.cfg  setup.py
src/asv_manual_control/asv_manual_control/: joy_node.py  joy_thruster_node.py  thruster_node.py
src/asv_perception/: package.xml  setup.py
src/asv_radar/: package.xml  setup.cfg  setup.py
src/asv_radar/asv_radar/: radar_node.py
src/asv_radar/config/: radar_params.yaml
src/asv_radar/launch/: radar.launch.py
src/asv_teleop/: package.xml  setup.cfg  setup.py
src/asv_teleop/asv_teleop/: teleop_node.py
src/asv_teleop/config/: teleop_params.yaml
src/asv_teleop/launch/: teleop.launch.py
src/asv_thruster/: package.xml  setup.cfg  setup.py
src/asv_thruster/asv_thruster/: ardu_thruster.py  asv_thruster_auto_node.py  asv_thruster_node.py  thruster_node.py
src/asv_thruster/config/: thruster_params.yaml
src/asv_thruster/launch/: thruster.launch.py
src/asv_trash_detection/: package.xml  setup.cfg  setup.py
src/asv_trash_detection/asv_trash_detection/: detection_node.py
src/asv_ultrasonic/: package.xml  setup.cfg  setup.py
src/asv_ultrasonic/asv_ultrasonic/: ultrasonic_node.py
src/asv_ultrasonic/config/: ultrasonic_params.yaml
src/asv_web/: package.xml  setup.cfg  setup.py
src/asv_web/asv_web/: autonomous_pilot.py  camera_server.py  local_server.py  shore_detector.py  ws_bridge.py
src/asv_web/launch/: system.launch.py
