<?xml version="1.0"?>
<package format="3">
  <name>asv_bringup</name>
  <version>0.1.0</version>
  <description>Master bringup launch for Autonomous Lake Cleaning ASV</description>
  <maintainer email="gt0908@srmist.edu.in">ASV Team</maintainer>
  <license>MIT</license>
  <exec_depend>asv_gps</exec_depend>
  <exec_depend>asv_imu</exec_depend>
  <exec_depend>asv_radar</exec_depend>
  <exec_depend>asv_ultrasonic</exec_depend>
  <exec_depend>asv_camera</exec_depend>
  <exec_depend>asv_thruster</exec_depend>
  <exec_depend>asv_teleop</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
