<?xml version="1.0"?>
<package format="3">
  <name>asv_gps</name>
  <version>0.1.0</version>
  <description>GPS node for Autonomous Lake Cleaning ASV</description>
  <maintainer email="your@email.com">ASV Team</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
