<?xml version="1.0"?>
<package format="3">
  <name>asv_radar</name>
  <version>0.1.0</version>
  <description>DFRobot C4001 mmWave Radar node for Autonomous Lake Cleaning ASV</description>
  <maintainer email="gt0908@srmist.edu.in">ASV Team</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
