<?xml version="1.0"?>
<package format="3">
  <name>asv_web</name>
  <version>0.0.0</version>
  <description>ASV Web System</description>

  <maintainer email="you@todo.com">harish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
